--- a/style.css
+++ b/style.css
@@ -219,11 +219,11 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: var(--clr-grayblack-500);
+    background-color: var(--clr-neutral-900);
 }
 
 body::-webkit-scrollbar-track {
-    background: var(--clr-graywhite-500);
+    background: var(--clr-neutral-300);
 }
 
 /* body*/
