--- a/style.css
+++ b/style.css
@@ -386,9 +386,16 @@ body::-webkit-scrollbar-track {
         transform: scale(1.05) translateY(-0.125em);
     }
 
-/* navigation */
+    .button[data-reverse=true] {
+        background-color: var(--clr-neutral-100);
+        color: var(--clr, var(--clr-primary-400));
+    }
 
-.primary-header {
+
+
+  /* navigation */
+
+        .primary-header {
     /* padding-top: var(--size-700);*/
 }
 
@@ -518,43 +525,30 @@ a:visited {
         width: max-content;
     }
 
-.home-section.youtube{
-   
-}
-
-.home-section.youtube {
-    background-image: url(images)
-}
+   .home-section.youtube {
+        background-image: url(images/youtube.svg), linear-gradient(120deg,var(--clr-neutral-100),var(--clr-youtube-100));
+        background-position: 50%, 0 0;
+        background-repeat: no-repeat;
+        background-size: 55rem, 400%;
+    }
 
 
 .youtube {
-    --clr: var(--clr-youtubek-400);
+    --clr: var(--clr-youtube-400);
 }
 
 .article {
-    --clr: var(--clr-bluek-400);
+    --clr: var(--clr-article-400);
 }
 
-.volleyball {
-    --clr: var(--clr-yellow-500);
+.course {
+    --clr: var(--clr-course-400);
 }
 
-.volleyballDiv {
-    background: rgba(250, 169, 137, 1);
-    padding: 0.3em;
-    border: white solid 8px;
-}
-
-    .volleyballDiv h2 {
-        line-height: 1;
-    }
-
-.volleyballColor {
-    color: var(--clr-bluevb-500);
-}
-
-.home-section.volleyball {
-    background: rgb(51,205,222);
+.home-section.course {
+    background-color: var(--clr-course-400);
+    background-image: linear-gradient(120deg, var(--clr-article-400), var(--clr-course-400));
+    color: var(--clr-neutral-100);
 }
 
 .newsletter {
@@ -564,18 +558,6 @@ a:visited {
 .youtubeLink {
 }
 
-
-
-/* plava verzija sekcije*/
-
-/*.home-section.volleyball p {
-    color: var(--clr-bluevb-500);
-}*/
-
-.home-section.youtube {
-    background-image: linear-gradient(154deg,var(--clr-neutral-100),var(--clr-repinky-500));
-    background-repeat: no-repeat;
-}
 
 
 /* footer */
@@ -684,7 +666,7 @@ a:visited {
 }
 
 .text-neutral-100 {
-    color: var(--clr-neutral-100);
+    color: var(--clr-neutral-100) !important;
 }
 
 .text-neutral-900 {
