--- a/style.css
+++ b/style.css
@@ -324,6 +324,16 @@ body::-webkit-scrollbar-track {
     grid-area: paragraph;
 }
 
+@media only screen and (min-width:40em){
+    .hero picture {
+        height:100%;
+        max-height: 25rem;
+        max-width: 17.5rem;
+        min-width: 15rem;
+        width: 25vw;
+    }
+}
+
 /* icons */
 .icons a {
     text-decoration: none;
