--- a/style.css
+++ b/style.css
@@ -118,7 +118,6 @@ button, input, label {
 /* A elements that don't have a class get default styles */
 a:not([class]) {
     text-decoration-skip-ink: auto;
-    color: currentColor;
 }
 
 /* Make images easier to work with */
@@ -220,7 +219,7 @@ strong {
     }
 
 a {
-    color: var(--clr,var(--clr-grayblack-500));
+    color: var(--clr,var(--clr-primary-400))
 }
 
 body::-webkit-scrollbar {
