--- a/style.css
+++ b/style.css
@@ -563,6 +563,10 @@ a:visited {
     --clr: var(--clr-course-400);
 }
 
+.resource {
+    --clr: var(--clr-resource-400);
+}
+
 .home-section.course {
     background-color: var(--clr-course-400);
     background-image: linear-gradient(120deg, var(--clr-article-400), var(--clr-course-400));
@@ -649,9 +653,9 @@ a:visited {
     }
 }
 
-:where(.flow :not(:first-child)) {
+/*:where(.flow :not(:first-child)) {
     margin-top: var(--flow-spacer, 3em);
-}
+}*/
 
 .text-center {
     text-align: center;
@@ -791,4 +795,5 @@ a:focus, a:hover {
     color: var(--clr-primary-400);
     text-decoration: none;
 }
+
 
