--- a/style.css
+++ b/style.css
@@ -797,15 +797,18 @@ a:focus, a:hover {
 }
 
 .subscriptionDiv {
-    display: flex;
+   /* display: flex;
     flex-direction:column;
-    gap: 1em;
-    background-color: #DEDEDE;
-    padding: 64px;
-    margin: 64px 0px 64px 0px;
+    gap: 1em;*/
+    background-color: var(--clr-neutral-200);
+    padding: 2rem;
+    margin: 2rem 0;
 }
 
 .formDiv {
-    display: flex;
+    display: grid;
     gap: 1em;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 20rem));
+    margin-bottom: 1rem;
 }
+
